# Ithaca

./: .gitignore  .gitmodules  AsyncSampleLoader.cpp  AudioProcessingEngine.cpp  AudioProcessingEngine.h  BuildID.h.in  CMakeLists.txt  GuiConstants.h  GuiHelpers.cpp  GuiHelpers.h  InfoHeaderComponent.cpp  InfoHeaderComponent.h  InfoPanelComponent.cpp  InfoPanelComponent.h  IthacaConfig.h  IthacaPluginEditor.cpp  IthacaPluginEditor.h  IthacaPluginProcessor.cpp  IthacaPluginProcessor.h  MidiCCDefinitions.h  MidiCCManager.cpp  MidiCCManager.h  MidiLearnManager.h  MidiProcessor.cpp  MidiProcessor.h  ParameterAttachmentManager.cpp  ParameterAttachmentManager.h  ParameterDefaults.h  ParameterManager.cpp  ParameterManager.h  README.md  SAMPLEPATHS.md  SamplerManager.cpp  SamplerManager.h  SliderFactory.cpp  SliderFactory.h  SliderPanelComponent.cpp  SliderPanelComponent.h  instrument-definition.template.json  samplebank-config.template.json  (+2 more)
.claude/: settings.local.json
cmake/: InstallDecorators.cmake  InstallSampleBankConfig.cmake
decorators/: README.md  icon.icns
ithaca/audio/: AsyncSampleLoader.cpp  AsyncSampleLoader.h  InstrumentMetadata.cpp  InstrumentMetadata.h  IthacaPluginProcessor.cpp  IthacaPluginProcessor.h  PerformanceMonitor.cpp  PerformanceMonitor.h  PluginStateManager.cpp  PluginStateManager.h  SampleBankPathManager.cpp  SampleBankPathManager.h
ithaca/config/: AppConstants.h  BuildID.h.in  IthacaConfig.h
ithaca/gui/: IthacaPluginEditor.cpp  IthacaPluginEditor.h
ithaca/gui/components/: InfoHeaderComponent.cpp  InfoHeaderComponent.h  MidiLearnSlider.h  SampleBankSelectorComponent.cpp  SampleBankSelectorComponent.h  SliderPanelComponent.cpp  SliderPanelComponent.h
ithaca/gui/factories/: InfoHeaderLabelFactory.cpp  InfoHeaderLabelFactory.h  SliderFactory.cpp  SliderFactory.h
ithaca/gui/helpers/: GuiHelpers.cpp  GuiHelpers.h
ithaca/gui/layout/: InfoHeaderLayout.cpp  InfoHeaderLayout.h
ithaca/midi/: MidiCCDefinitions.h  MidiHelpers.h  MidiLearnManager.cpp  MidiLearnManager.h  MidiProcessor.cpp  MidiProcessor.h
ithaca/parameters/: ParameterAttachmentManager.cpp  ParameterManager.cpp  ParameterManager.h
sampler/: mixer.cpp  mixer.h  sampler.h  voice.cpp
